--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   lottie: ^2.2.0
+  hive: ^2.2.3
+  provider: ^6.0.5
+  path_provider: ^2.0.13
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
+  hive_generator:
+  build_runner:
   flutter_test:
     sdk: flutter
 
