--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.5
   path_provider: ^2.0.13
   hive_flutter: ^1.1.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   hive_generator:
