--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^2.2.0
   hive: ^2.2.3
-  provider: ^6.0.5
   path_provider: ^2.0.13
   hive_flutter: ^1.1.0
   uuid: ^3.0.7
+  intl: ^0.18.0
 
 dev_dependencies:
   hive_generator:
