--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: ^1.1.0
   uuid: ^3.0.7
   intl: ^0.18.0
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   hive_generator:
