--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   uuid: ^3.0.7
   intl: ^0.18.0
   fluttertoast: ^8.2.1
+  sizer: ^2.0.15
+  flutter_slidable: ^3.0.0
+  share_plus: ^6.3.4
 
 dev_dependencies:
   hive_generator:
