--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   flutter_slidable: ^3.0.0
   share_plus: ^6.3.4
   rive: ^0.10.4
+  firebase_core: ^2.12.0
+  google_sign_in: ^6.1.0
+  firebase_auth: ^4.6.0
+  cloud_firestore: ^4.7.0
 
 dev_dependencies:
   hive_generator:
